--- a/Backoffice/Pages/Monitor.razor
+++ b/Backoffice/Pages/Monitor.razor
@@ -10,6 +10,9 @@
     <li class="nav-item" style="margin: 10px">
         <button class="nav-link @CheckActive(Menus.WalletObserver)" aria-current="page" @onclick="SetWalletObserver" >Wallet Observer</button>
     </li>
+    <li class="nav-item" style="margin: 10px">
+        <button class="nav-link @CheckActive(Menus.ActivityObserver)" aria-current="page" @onclick="SetActivityObserver" >Activity Observer</button>
+    </li>
 </ul>
 
 <div style="margin: 10px">
@@ -20,6 +23,10 @@
     @if (ActivePage == Menus.WalletObserver)
     {
         <WalletObserverComponent />
+    }
+    @if (ActivePage == Menus.ActivityObserver)
+    {
+        <ActivityObserverComponent />
     }
 </div>
 
@@ -46,11 +53,17 @@
     public enum Menus
     {
         Trades,
-        WalletObserver
+        WalletObserver,
+        ActivityObserver
     }
 
     private void SetWalletObserver()
     {
         SetActive(Menus.WalletObserver);
+    }
+    
+    private void SetActivityObserver()
+    {
+        SetActive(Menus.ActivityObserver);
     }
 }
