--- a/Backoffice/Components/Clients/ClientPresentationComponent.razor
+++ b/Backoffice/Components/Clients/ClientPresentationComponent.razor
@@ -44,9 +44,11 @@
         </tr>
         @if (ActiveWallet != null)
         {
-
             <tr>
                 <ul class="nav nav-tabs nav-pills">
+                    <li class="nav-item">
+                        <button class="page-link" style="@(GetMenuStyle(ClientPage.WalletInfo))" aria-current="page" @onclick="@(() => SetPage(ClientPage.WalletInfo))">Wallet Info</button>
+                    </li>
                     <li class="nav-item">
                         <button class="page-link" style="@(GetMenuStyle(ClientPage.Balances))" aria-current="page" @onclick="@(() => SetPage(ClientPage.Balances))">Balances</button>
                     </li>
@@ -75,6 +77,10 @@
                     <CascadingValue Value="@ActiveWallet" Name="Wallet">
                     @switch (ActivePage)
                     {
+                        case ClientPage.WalletInfo:
+                            <WalletInfoComponent Wallet = "@ActiveWallet"/>
+                            break;
+                            
                         case ClientPage.Balances:
                             <ClientBalancesComponent/>
                             break;
@@ -153,6 +159,7 @@
 
     private enum ClientPage
     {
+        WalletInfo,
         Balances,
         BalanceHistory,
         SwapHistory,
@@ -172,7 +179,7 @@
 
         Client = new ClientModel(BrokerId, ClientId, BrandId,EmailConfirmed, Email);
         Client.Wallets = (wallets.Wallets ?? new List<ClientWallet>())
-            .Select(e => new WalletModel(e.Name, BrokerId, ClientId, BrandId, e.WalletId, e.IsDefault))
+            .Select(e => new WalletModel(e.Name, BrokerId, ClientId, BrandId, e.WalletId, e.IsDefault, e.BaseAsset))
             .ToList();
         
         ActiveWallet = null;
