--- a/Backoffice/Components/Clients/WalletInfoComponent.razor
+++ b/Backoffice/Components/Clients/WalletInfoComponent.razor
@@ -1,6 +1,7 @@
 @using Backoffice.Components.Clients.Model
 
 <h3>Wallet Name: @Wallet.Name</h3>
+<h3>Wallet Id: @Wallet.WalletId</h3>
 <h3>Base Asset: @Wallet.BaseAsset</h3>
 
 @code {
