--- a/Backoffice/Components/Clients/WalletInfoComponent.razor
+++ b/Backoffice/Components/Clients/WalletInfoComponent.razor
@@ -2,6 +2,7 @@
 
 <h3>Wallet Name: @Wallet.Name</h3>
 <h3>Wallet Id: @Wallet.WalletId</h3>
+<h3>Created Date: @Wallet.CreatedAt</h3>
 <h3>Base Asset: @Wallet.BaseAsset</h3>
 
 @code {
