fee for withdrawals

--- a/Backoffice/Components/CashOperations/Withdrawals/WithdrawalTableRow.razor
+++ b/Backoffice/Components/CashOperations/Withdrawals/WithdrawalTableRow.razor
@@ -14,6 +14,9 @@
     <td>@Item.TransactionId</td>
     <td>@Item.Amount</td>
     <td>@Item.AssetSymbol</td>
+    <td>@Item.FeeAssetSymbol</td>
+    <td>@Item.FeeAmount</td>
+    <td>@Item.ActualFee</td>
     <td>@Item.ToAddress</td>
     <td>@Item.Integration</td>
     <td>@Item.Comment</td>
