--- a/Backoffice/Components/CashOperations/Withdrawals/WithdrawalsComponent.razor
+++ b/Backoffice/Components/CashOperations/Withdrawals/WithdrawalsComponent.razor
@@ -31,6 +31,9 @@
         <th>TransactionId</th>
         <th>Amount</th>
         <th>AssetSymbol</th>
+        <th>Fee AssetSymbol</th>
+        <th>Fee Amount (client)</th>
+        <th>Fee Amount (blockchain)</th>
         <th>Destination address</th>
         <th>Integration</th>
         <th>Comment</th>
