deposit addresses in client page

--- a/Backoffice/Components/Clients/ClientPresentationComponent.razor
+++ b/Backoffice/Components/Clients/ClientPresentationComponent.razor
@@ -98,7 +98,7 @@
                             break;
 
                         case ClientPage.BlockchainDepositAddress:
-                            <p>BlockchainDepositAddress</p>
+                            <ClientBlockchainDepositAddressComponent ClientId="@Client.ClientId" BrokerId="@Client.BrokerId"  WalletId="@ActiveWallet.WalletId" />
                             break;
                             
                         case ClientPage.Sessions:
