--- a/Backoffice/Pages/BitGo.razor
+++ b/Backoffice/Pages/BitGo.razor
@@ -1,5 +1,8 @@
 ﻿@using Backoffice.Components.BitGo.Balances
 @using Backoffice.Components.BitGo.SessionUnlock
+@using Backoffice.Components.BitGo.Wallets
+@using Backoffice.Components.BitGo.Users
+@using Backoffice.Components.BitGo.PendingApprovals
 
 @page "/BitGo"
 
@@ -14,7 +17,19 @@
         <button class="nav-link @CheckActive(Menus.Balances)" aria-current="page" @onclick="SetBalances">Balances</button>
     </li>
     <li class="nav-item" style="margin: 10px">
+        <button class="nav-link @CheckActive(Menus.PendingApprovals)" aria-current="page" @onclick="SetPendingApprovals">Pending Approvals</button>
+    </li>
+    <li class="nav-item" style="margin: 10px">
         <button class="nav-link @CheckActive(Menus.UnlockSession)" aria-current="page" @onclick="SetUnlockSession">Unlock session</button>
+    </li>
+    <li class="nav-item" style="margin: 10px">
+        <button class="nav-link @CheckActive(Menus.Wallets)" aria-current="page" @onclick="SetWallets">Wallets</button>
+    </li>
+    <li class="nav-item" style="margin: 10px">
+        <button class="nav-link @CheckActive(Menus.Users)" aria-current="page" @onclick="SetUsers">Users</button>
+    </li>
+    <li class="nav-item" style="margin: 10px">
+        <button class="nav-link @CheckActive(Menus.PendingApprovals)" aria-current="page" @onclick="SetPendingApprovals">Pending Approvals</button>
     </li>
 </ul>
 
@@ -37,6 +52,21 @@
     @if (ActivePage == Menus.UnlockSession)
     {
         <BitGoSessionUnlockComponent/>
+    }
+
+    @if (ActivePage == Menus.Wallets)
+    {
+        <BitGoWalletsListComponent/>
+    }
+
+    @if (ActivePage == Menus.Users)
+    {
+        <BitGoUsersListComponent/>
+    }
+
+    @if (ActivePage == Menus.PendingApprovals)
+    {
+        <BitGoPendingApprovalsListComponent/>
     }
 </div>
 
@@ -63,7 +93,10 @@
         Coins,
         Assets,
         Balances,
-        UnlockSession
+        UnlockSession,
+        Wallets,
+        Users,
+        PendingApprovals
     }
 
 
@@ -85,5 +118,20 @@
     private void SetUnlockSession()
     {
         SetActive(Menus.UnlockSession);
+    }
+
+    private void SetWallets()
+    {
+        SetActive(Menus.Wallets);
+    }
+
+    private void SetUsers()
+    {
+        SetActive(Menus.Users);
+    }
+
+    private void SetPendingApprovals()
+    {
+        SetActive(Menus.PendingApprovals);
     }
 }
