--- a/Backoffice/Components/BitGo/Users/BitGoUsersDetailsDialogEdit.razor
+++ b/Backoffice/Components/BitGo/Users/BitGoUsersDetailsDialogEdit.razor
@@ -1,4 +1,5 @@
 ﻿@using Service.BitGo.SignTransaction.Domain.Models
+@using Backoffice.Abstractions.Bo
 <BaseTwoButtonsDialog
     Caption=@(!IsCreate ? $"{Item.Id}" : "Create a new BitGo User")
     OnClose="OnClose"
@@ -80,6 +81,9 @@
 
     [Parameter]
     public EventCallback<BitGoUser> OnUpdateCallback { get; set; }
+    
+    [CascadingParameter(Name = "CurrentBoUserUser")]
+    public IBackOfficeUser CurrentBoUserUser { get; set; }
 
     private void OnClose()
     {
@@ -100,7 +104,10 @@
         if (IsCreate)
             Item = new BitGoUser()
             {
-                BrokerId = "jetwallet"
+                BrokerId = "jetwallet",
+                RegisterDate = DateTime.Now,
+                UpdatedDate = DateTime.Now,
+                UpdatedBy = CurrentBoUserUser.Id
             };
     }
 
