updated withdrawal page

--- a/Backoffice/Components/CashOperations/Withdrawals/WithdrawalTableRow.razor
+++ b/Backoffice/Components/CashOperations/Withdrawals/WithdrawalTableRow.razor
@@ -23,6 +23,7 @@
     <td>@Item.Status</td>
     <td>@Item.MatchingEngineId</td>
     <td>@Item.LastError</td>
+    <td>@Item.MeErrorCode</td>
     <td>@Item.RetriesCount</td>
     <td>@Item.EventDate</td>
     <td>@Item.WorkflowState</td>
