--- a/Backoffice/Pages/References.razor
+++ b/Backoffice/Pages/References.razor
@@ -15,6 +15,9 @@
     <li class="nav-item" style="margin: 10px">
         <button class="nav-link @CheckActive(Menus.News)" @onclick="SetNews" >News</button>
     </li>
+    <li class="nav-item" style="margin: 10px">
+        <button class="nav-link @CheckActive(Menus.ExternalTikerSettings)" @onclick="SetExternalTikerSettings" >External Tiker Settings</button>
+    </li>
 </ul>
 
 <div style="margin: 10px">
@@ -35,6 +38,10 @@
     @if (ActivePage == Menus.News)
     {
         <NewsComponent />
+    }
+    @if (ActivePage == Menus.ExternalTikerSettings)
+    {
+        <ExternalTikerSettingsComponent />
     }
 </div>
 
@@ -82,7 +89,12 @@
         MarketReferences,
         MarketInfo,
         CmcApiKeys,
-        News
+        News,
+        ExternalTikerSettings
     }
- 
+
+    private void SetExternalTikerSettings()
+    {
+        SetActive(Menus.ExternalTikerSettings);
+    }
 }
