update news dto

--- a/Backoffice/Components/MarketInfo/News/NewsComponent.razor
+++ b/Backoffice/Components/MarketInfo/News/NewsComponent.razor
@@ -12,7 +12,9 @@
         <th>Topic</th>
         <th>Lang</th>
         <th>Source</th>
+        <th>Sentiment</th>
         <th>UrlAddress</th>
+        <th>ImageUrl</th>
         <th>AssociatedAssets</th>
         <th>Timestamp</th>
     </tr>
@@ -30,7 +32,9 @@
             <td>@news.Topic</td>
             <td>@news.Lang</td>
             <td>@news.Source</td>
+            <td>@news.Sentiment</td>
             <td>@news.UrlAddress</td>
+            <td>@news.ImageUrl</td>
             <td>@news.AssociatedAssets.JoinIntoString(128)</td>
             <td>@news.Timestamp</td>
 
